// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DfuEditor should render stopping 1`] = `
<form
  className="form-horizontal native-key-bindings"
>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Zip file
    </label>
    <div
      className="input-group col-sm-10"
    >
      <input
        className="form-control"
        readOnly={true}
        value="/path/to/file"
      />
      <div
        className="input-group-append"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={true}
          id="choose-file"
          onClick={[Function]}
          type="button"
        >
          Choose
        </button>
      </div>
    </div>
  </div>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Package info
    </label>
    <div
      className="input-group col-sm-10"
    >
      <pre>
        application:
  bin_file: "dfu.bin"
  dat_file: "dfu.dat"

      </pre>
    </div>
  </div>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Progress
    </label>
    <div
      className="input-group col-sm-10"
    >
      Stopping...
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={10}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "10%",
            }
          }
        >
          10%
        </div>
      </div>
    </div>
  </div>
  <div
    className="row-of-buttons btn-toolbar"
    role="toolbar"
  >
    <div
      style={Object {}}
    >
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="mdi mdi-stop"
        />
        Stop DFU
      </button>
    </div>
  </div>
</form>
`;

exports[`DfuEditor should render with default props 1`] = `
<form
  className="form-horizontal native-key-bindings"
>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Zip file
    </label>
    <div
      className="input-group col-sm-10"
    >
      <input
        className="form-control"
        readOnly={true}
        value=""
      />
      <div
        className="input-group-append"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          id="choose-file"
          onClick={[Function]}
          type="button"
        >
          Choose
        </button>
      </div>
    </div>
  </div>
  <div
    className="row-of-buttons btn-toolbar"
    role="toolbar"
  >
    <div
      style={
        Object {
          "display": "none",
        }
      }
    >
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        Start DFU
      </button>
    </div>
  </div>
</form>
`;

exports[`DfuEditor should render with dfu completed 1`] = `
<form
  className="form-horizontal native-key-bindings"
>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Zip file
    </label>
    <div
      className="input-group col-sm-10"
    >
      <input
        className="form-control"
        readOnly={true}
        value="/path/to/file"
      />
      <div
        className="input-group-append"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={true}
          id="choose-file"
          onClick={[Function]}
          type="button"
        >
          Choose
        </button>
      </div>
    </div>
  </div>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Package info
    </label>
    <div
      className="input-group col-sm-10"
    >
      <pre>
        application:
  bin_file: "dfu.bin"
  dat_file: "dfu.dat"

      </pre>
    </div>
  </div>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Progress
    </label>
    <div
      className="input-group col-sm-10"
    >
      Completed
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "0%",
            }
          }
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    className="row-of-buttons btn-toolbar"
    role="toolbar"
  >
    <div
      style={
        Object {
          "display": "none",
        }
      }
    >
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        Start DFU
      </button>
    </div>
  </div>
</form>
`;

exports[`DfuEditor should render with file path 1`] = `
<form
  className="form-horizontal native-key-bindings"
>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Zip file
    </label>
    <div
      className="input-group col-sm-10"
    >
      <input
        className="form-control"
        readOnly={true}
        value="/path/to/file"
      />
      <div
        className="input-group-append"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          id="choose-file"
          onClick={[Function]}
          type="button"
        >
          Choose
        </button>
      </div>
    </div>
  </div>
  <div
    className="row-of-buttons btn-toolbar"
    role="toolbar"
  >
    <div
      style={Object {}}
    >
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        Start DFU
      </button>
    </div>
  </div>
</form>
`;

exports[`DfuEditor should render with file path and package info 1`] = `
<form
  className="form-horizontal native-key-bindings"
>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Zip file
    </label>
    <div
      className="input-group col-sm-10"
    >
      <input
        className="form-control"
        readOnly={true}
        value="/path/to/file"
      />
      <div
        className="input-group-append"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          id="choose-file"
          onClick={[Function]}
          type="button"
        >
          Choose
        </button>
      </div>
    </div>
  </div>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Package info
    </label>
    <div
      className="input-group col-sm-10"
    >
      <pre>
        application:
  bin_file: "dfu.bin"
  dat_file: "dfu.dat"

      </pre>
    </div>
  </div>
  <div
    className="row-of-buttons btn-toolbar"
    role="toolbar"
  >
    <div
      style={Object {}}
    >
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        Start DFU
      </button>
    </div>
  </div>
</form>
`;

exports[`DfuEditor should render with file path, package info, and dfu in progress 1`] = `
<form
  className="form-horizontal native-key-bindings"
>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Zip file
    </label>
    <div
      className="input-group col-sm-10"
    >
      <input
        className="form-control"
        readOnly={true}
        value="/path/to/file"
      />
      <div
        className="input-group-append"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={true}
          id="choose-file"
          onClick={[Function]}
          type="button"
        >
          Choose
        </button>
      </div>
    </div>
  </div>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Package info
    </label>
    <div
      className="input-group col-sm-10"
    >
      <pre>
        application:
  bin_file: "dfu.bin"
  dat_file: "dfu.dat"

      </pre>
    </div>
  </div>
  <div
    className="form-group row"
  >
    <label
      className="text-right form-label col-form-label col-sm-2"
    >
      Progress
    </label>
    <div
      className="input-group col-sm-10"
    >
      In progress...
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={10}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "10%",
            }
          }
        >
          10%
        </div>
      </div>
    </div>
  </div>
  <div
    className="row-of-buttons btn-toolbar"
    role="toolbar"
  >
    <div
      style={Object {}}
    >
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="mdi mdi-stop"
        />
        Stop DFU
      </button>
    </div>
  </div>
</form>
`;
